<resources>
    <string name="app_name">TankYou</string>

    <string name="field_required">Champs de texte obligatoire.</string>

    <string name="button_start">Commencer</string>
    <string name="input_pseudo">Pseudo</string>

    <string name="no_pseudo_get">Pas de pseudo transmis !</string>

    <string name="alert_no_sensor_title">Capteur manquant</string>
    <string name="alert_no_compass_message">Le capteur de la boussole n\'a pas été trouvé !</string>
    <string name="alert_no_accelerometer_message">Votre téléphone ne possède pas d\'accéléromètre…</string>
    <string name="jouer">Jouer</string>
    <string name="scores">Scores</string>
    <string name="rules">Règles</string>
    <string name="about">A propos</string>
    <string name="about_text">Application développé dans le cadre d\'un projet Android par Jean-Charles Moussé.</string>
    <string name="a_propos_title">A PROPOS</string>

    <string name="rules_title">Règles</string>

    <string name="scores_title">Scores</string>
    <string name="stats_title">Mes scores</string>
    <string name="scores_user">Joueur</string>
    <string name="scores_points">Points</string>
    <string name="scores_duree">Temps</string>
    <string name="scores_date">Date</string>

    <string name="end_game_title">GAME OVER</string>
    <string name="end_game_retry">Réessayer</string>
    <string name="end_game_menu">Retour au menu</string>

    <string name="input_required">Champs de saisie obligatoire</string>
    <string name="ask_username">Votre pseudo</string>
    <string name="choose_username">Saisissez un pseudo…</string>
    <string name="scores_reset">Reset</string>
    <string name="score">SCORE</string>
    <string name="duree">DUREE</string>
    <string name="save">Enregistrer</string>
    <string name="game_score">Score:</string>
    <string name="game_time">Temps:</string>
    <string name="reset_score_title">Suppression</string>
    <string name="reset_score_text">Voulez-vous vraiment supprimer vos scores ?</string>

    <string name="rules_html">
        <![CDATA[
            <html><head><style>p {color: #ffffff; font-size: 20px; text-align: justify;}</style></head><body>
                <p>Le but est de contrôler un <strong>tank</strong> <img src="tanks_sprites_blue.png" width="45" /> et d\'éviter les <strong>obstacles</strong> <img src="obstacle.png" width="25" /> qui se déplacent sur l\'écran.</p>
                <p>Le jeu se joue grâce à l\'<strong>accéléromètre</strong> pour pouvoir se déplacer.<br />
                Pour avancer il suffit de pencher son téléphone en avant ou en arrière. Pour tourner à gauche ou à droite il faut pencher le téléphone sur le côté<br /><br />
                Vous avez la possibilité avec votre tank de <strong>tirer des missiles</strong> <img src="missile.png" width="20" /> pour détruire des obstacles.<br /><br />
                Entre chaque tire, il y un temps d\'attente de <strong>1.5sec</strong> durant laquel le tank recharge son missile.<br /><br />
                A chaque obstacle détruit vous gagnez <strong>un point</strong>. Vous avez 3 points de vie <img src="vie_3.png" width="65" />, si vous touchez 3 fois un obstacle, vous perdez la partie.</p></body></html>

        ]]>
    </string>
</resources>
