<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_scores"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/default_margin"
    android:paddingTop="@dimen/default_margin"
    tools:context="com.pyozer.tankyou.activity.ScoresActivity">

    <TextView
        android:id="@+id/scores_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="34dp"
        android:text="@string/scores_title"
        android:textColor="@color/white"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Display2" />

    <ImageButton
        android:id="@+id/scores_back"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/scores_title"
        android:layout_alignBottom="@+id/scores_title"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:layout_marginStart="@dimen/default_margin"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:adjustViewBounds="true"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_arrow_back_white_24dp" />

    <LinearLayout
        android:id="@+id/scores_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="34dp"
        android:layout_below="@id/scores_title"
        android:background="@color/backgroundLight">

        <TextView
            android:id="@+id/scores_header_1"
            android:layout_width="0dp"
            android:layout_weight="0.50"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"
            android:paddingStart="@dimen/default_margin"
            android:paddingEnd="8dp"
            style="@style/Base.TextAppearance.AppCompat.Small.Inverse" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/scores_duree"
            android:paddingTop="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"
            android:paddingStart="8dp"
            android:paddingEnd="@dimen/default_margin"
            style="@style/Base.TextAppearance.AppCompat.Small.Inverse" />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.25"
            android:layout_height="wrap_content"
            android:text="@string/scores_points"
            android:paddingTop="@dimen/default_margin"
            android:paddingBottom="@dimen/default_margin"
            android:paddingStart="8dp"
            android:paddingEnd="@dimen/default_margin"
            style="@style/Base.TextAppearance.AppCompat.Small.Inverse" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/scores_loader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/scores_header"
        android:layout_marginTop="30dp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/scores_list"
        android:layout_below="@id/scores_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</RelativeLayout>